--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "homepage": "/static/react",
   "dependencies": {
-    "@babel/core": "7.9.0",
+    "@babel/core": "^7.9.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "axios": "^0.20.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -49,7 +50,8 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.14.0",
-    "resolve": "1.15.0",
+    "react-router-dom": "^5.2.0",
+    "resolve": "^1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
